--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@oncomouse/vue-cli-plugin-vue-types",
   "version": "1.0.0",
-  "description": "",
+  "description": "vue-cli 3 plugin that adds vue-types",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
